Minor improvements made, created more efficient code and add a textView to the halfTime portions so that the user can know much time is remaining at that time.

--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -17,19 +17,9 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         />
 
-    <TextView
-        android:id="@+id/textView_countdown_timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/my_toolbar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="62dp"
-        android:text="00:00"
-        android:textColor="@color/colorCoolGrey"
-        android:textSize="55dp" />
 
     <TextView
-        android:id="@+id/textView_opening_timer"
+        android:id="@+id/textView_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
